--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Cy</title>
+    <title>Marcus</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/app.js"></script>
 </head>
@@ -11,7 +11,7 @@
 <body>
     <div id="navbar">
         <div class="container">
-            <span id="name">Cy</span>
+            <span id="name">Marcus</span>
             <span id="links">
                 <a href="#experience">EXPERIENCE</a>
                 <a href="#projects">PROJECT</a>
@@ -23,7 +23,7 @@
         <div class="section" id="header">
             <div class="container">
                 <img id="image" src="./img/index.jpg" />
-                <h1>Hi, I'm Cy!</h1>
+                <h1>Hi, I'm Marcus!</h1>
                 <h3>I'm a student studying software engineering</h3>
                 <p id="about">
                     Irure do reprehenderit aute excepteur adipisicing cupidatat duis dolor. Aliqua tempor exercitation
